--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,1 +1,15 @@
 
+pipeline {
+  agent any
+  
+  stages{
+  
+    stage('build') {
+    
+      steps {
+        sh 'echo "Building the application..."
+      }
+    }
+    
+  }
+}
